--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,6 @@ services:
     restart: always
     env_file:
       - .env
-    ports:
-      - 5000:5000
     depends_on:
       - mysql
 
@@ -21,5 +19,21 @@ services:
       - mydatabase:/var/lib/mysql
     command: ["--wait-timeout=28800"]
 
+  nginx:
+    container_image: nginx
+    image: jonasal/nginx-certbot
+    restart: always
+    environment:
+      - CERTBOT_EMAIL=name@example.com
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_secrets:/etc/letsencrypt
+      - ./user_conf.d:/etc/nginx/user_conf.d
+    depends_on:
+      - myportfolio
+
 volumes:
   mydatabase:
+  nginx_secrets:
