--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,6 @@ jobs:
           SSH_IP: ${{ secrets.SSH_IP }}
         
       - name: Deploy site
-        run: ssh my-vps '~/redeploy-site.sh'
+        run:
+          chmod +x redeploy-site.sh 
+          ssh my-vps '~/redeploy-site.sh'
