--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,21 +19,21 @@ services:
       - mydatabase:/var/lib/mysql
     command: ["--wait-timeout=28800"]
 
-  nginx:
-    container_name: nginx
-    image: jonasal/nginx-certbot
-    restart: always
-    environment:
-      - CERTBOT_EMAIL=alanjmr206@gmail.com
-    ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - nginx_secrets:/etc/letsencrypt
-      - ./user_conf.d:/etc/nginx/user_conf.d
-    depends_on:
-      - myportfolio
+  # nginx:
+  #   container_name: nginx
+  #   image: jonasal/nginx-certbot
+  #   restart: always
+  #   environment:
+  #     - CERTBOT_EMAIL=alanjmr206@gmail.com
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   volumes:
+  #     - nginx_secrets:/etc/letsencrypt
+  #     - ./user_conf.d:/etc/nginx/user_conf.d
+  #   depends_on:
+  #     - myportfolio
 
 volumes:
   mydatabase:
-  nginx_secrets:
+  # nginx_secrets:
